# test_github

./: 01-a puma at large.md  02-thirteen equals one.md  04-the double life of Alfred Bloggs.md  05-the facts.md  README.md  a puma at large.md
NCE/: 02-thirteen equals one.md  03-an unknown goddess.md  06-Smash-and-grab.md
python_core_program/: 2015.py  collatz.py
python_core_program/02-socket/: tsTCPclnt.py
python_core_program/03-Internet/: 3.1.py
python_core_program/04-Threading/: mtsleepA.py  mtsleepB.py  onethr.py
python_core_program/1-RegEx/: 1.1.py  1.4.py  gendata.py
python_core_program/2-socket/: tsTCPclnt_Twisted.py  tsTCPclnt_socketserver.py  tsTCPserv.py  tsTCPserv_Twisted.py  tsTCPserv_socketserver.py  tsUDPclnt.py  tsUDPserv.py
python_core_program/3-Internet/: 3.1.py
vscode_python/1-RegEx/: 1.1.py
vscode_template/tk_mvc_template/: py3tk_template.py  roadtest.py
vscode_template/udp/: client_udp.py  server_udp.py
vscode_template/vscode_cpp_cmake/: CMakeLists.txt  build.sh
vscode_template/vscode_cpp_cmake/include/: solution.cpp  solution.h
vscode_template/vscode_cpp_cmake/src/: CMakeLists.txt
vscode_template/vscode_cpp_cmake_3_failed/: CMakeLists.txt  main.cpp
vscode_template/vscode_cpp_cmake_3_failed/inc/: solution.cpp  solution.h
vscode_template/vscode_cpp_cmake_3_failed/src/: hello.cpp  hello.hpp
vscode_template/vscode_cpp_gcc/: hw.cpp  readme.md
vscode_template/vscode_cpp_makefile/: hw2  hw2.cpp  makefile  readme.md  solution.cpp
vscode_template/vscode_python/: test.py
